# Terraria-SDL3

./: .gitignore  README.md
Terraria-SDL3/: CMakeLists.txt
Terraria-SDL3/res/texture_packs/default/: config.txt
Terraria-SDL3/res/worlds/: world - Copy.txt  world-backup.txt  world.txt
Terraria-SDL3/src/: main.cpp  resourcemanager.cpp  resourcemanager.h  terraria.h  texture.cpp  texture.h  world.cpp  world.h
Terraria-SDL3/src/entity/: character.cpp  character.h  entity.h
Terraria-SDL3/src/helper/: conversion.cpp  conversion.h
Terraria-SDL3/src/input/: input.cpp  input.h
Terraria-SDL3/src/render/: renderable.h
Terraria-SDL3/src/resource/: resources.cpp  resources.h
Terraria-SDL3/src/user_interface/: hud.cpp  hud.h  imguihelper.cpp  imguihelper.h
Terraria-SDL3/src/world/: world.cpp  world.h
